[project]
name = "injecty"
dynamic = ["version"]
description = "A simple IOC / Dependency injection micro framework for Python."
authors = [
    {name = "Tim O'Farrell", email = "tofarr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Repository = "https://github.com/tofarr/servey-stub"

[project.optional-dependencies]
dev = [
    "black>=23.3",
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.2",
    "pylint>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["injecty"]

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "examples"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.28.0",
]
